--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 #searchButton{
     margin-left: 1370px;
 }
+
+
+#opciones{
+    position: fixed;
+    top: 150px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} 
